test/src/e2e_vm_tests/test_programs/should_fail/missing_fn_arguments/src/main.sw
script;

fn bar(a: bool, b: u64) -> u64 {
  if a {
    b * 2
  } else {
    0
  }
}

fn main() -> u64 {
  bar(true)
}
